# xeeg_kit

./: LICENSE.txt  README.md  pyproject.toml  usage_example.ipynb
notebooks/: README.md  check_data_quality.ipynb  parallel_example.ipynb  preprocess_bel_280.py
notebooks/BEL_280_System/: visualize_bad_channels.ipynb  viz_bel_280.py
notebooks/Tutorials/: 3D_Bel280_Visualization.ipynb  Alpha_Frequency_Analysis.ipynb  Detect_Bad_Ch_Visualization.ipynb
xeeg_kit/: __init__.py  _config.py  analysis.py  artifact_cleaning.py  bel_280.py  bel_pipeline.py  parallel.py  utils.py  viz.py
xeeg_kit/data/: bel_280_channel_map.csv  ghw280_from_egig.gpsc
xeeg_kit/meegkit_vendor/: README.md  __init__.py  asr.py  sns.py  star.py  tspca.py
xeeg_kit/meegkit_vendor/utils/: __init__.py
