[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xeeg_kit"
version = "0.1.0"
description = "Preprocessing toolkit for BEL EEG System One (280-channel HD-EEG)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "mne>=1.4",
    "meegkit",
    "mne-icalabel",
    "numpy",
    "scipy",
    "joblib"
]

[tool.setuptools.packages.find]
include = ["xeeg_kit*"]   # only package xeeg_kit/, exclude notebooks/ and anything else
