# pyproject.toml
[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xeeg_kit"
version = "0.1.0"
description = "Preprocessing toolkit for BEL EEG System One (280-channel HD-EEG)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "mne>=1.4",
    "mne-icalabel",
    "numpy>=1.20",
    "scipy",
    "joblib",
    "statsmodels",          # Required for mad() in clean_windows
    "pyriemann>=0.7",       # Optional — omit if you don't use rASR
    "plotly",               # 3D visualizations in viz.py
    "pandas"                # Channel mapping and analysis
]

[tool.setuptools.packages.find]
include = ["xeeg_kit*"]

# DATA FILES
[tool.setuptools.package-data]
"xeeg_kit" = ["data/*.gpsc", "data/*.csv"]
