# pyproject.toml

# Build configuration and dependency manifest for xeeg_kit.
[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xeeg_kit"
version = "0.2.0"
description = "Preprocessing toolkit for BEL EEG System One (280-channel HD-EEG)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "mne>=1.4",
    "mne-icalabel",
    "numpy>=1.20",
    "scipy",
    "joblib",
    "statsmodels",
    "pyriemann>=0.7",
    "plotly",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["xeeg_kit*"]

[tool.setuptools.package-data]
"xeeg_kit" = ["data/*.gpsc", "data/*.csv"]
